# agentic-patterns

./: README.md  pyproject.toml
agentic_patterns/reflection_pattern/: reflection_agent.py
agentic_patterns/utils/: completions.py
